scenes enhance visibility fixed and adding id

--- a/src/scenes/enhanceVisibility/enhanceVIsibility.css
+++ b/src/scenes/enhanceVisibility/enhanceVIsibility.css
@@ -7,7 +7,7 @@
     width: 100%;
     height: auto;
     position: relative;
-    padding: 4em;
+    padding: 2em 4em;
 }
 
 .enhance-specifications {
